apps/gitea-mirror/overlays/nishir-tailnet/patch-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-mirror
spec:
  template:
    spec:
      containers:
        - name: gitea-mirror
