apps/gitea-mirror/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-mirror
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: gitea-mirror
      port:
        name: http
  tls:
    - hosts:
        - gitea-mirror
  ingressClassName: tailscale
